--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,81 @@ body {
   color: #555f62;
   background-color: #f9fafa;
   font-family: TBCX, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.7;
+  margin-top: 80px;
 }
-
+section {
+  width: 100%;
+  display: flex;
+  max-width: 1110px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  margin-top: 50px;
+}
+.padding_global {
+  padding-left: 47px;
+  padding-right: 47px;
+}
+.main_mini {
+  margin-top: 20px;
+  font-size: 12px;
+  color: #141719;
+  font-weight: 500;
+}
+.top_baner {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/top_buner_img.webp);
+  background-size: cover;
+  background-position: bottom;
+  min-height: 360px;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  background-color: #000;
+  border-radius: 6px;
+  position: relative;
+}
+.banner_inner_content {
+  border-radius: 4px;
+  width: 100%;
+  background-color: rgba(32, 31, 31, 0.359);
+  flex-direction: column;
+  align-items: flex-start;
+  display: flex;
+  color: #fff;
+  height: 100%;
+  justify-content: center;
+  flex: 1;
+  gap: 17px;
+  padding-left: 90px;
+}
+h1 {
+  font-weight: bold;
+  font-size: 28px;
+}
+.banner_inner_content p {
+  width: 450px;
+  font-weight: 200;
+}
+.banner_inner_content button {
+  display: flex;
+  padding: 15px 25px;
+  grid-column-gap: 6px;
+  background-image: linear-gradient(15deg, #001682, #3240e5);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.25s ease-in-out;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+.banner_inner_content button:hover {
+  background-image: linear-gradient(#3295ce, #3295ce);
+}
 header {
   z-index: 100;
   height: 80px;
@@ -133,6 +203,15 @@ header {
   transform: translateY(-5px) rotate(-45deg);
 }
 
+/* baner */
+.banner_container {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/top_buner_img.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 @media (max-width: 1440px) {
   .header_menu {
     font-size: 14px;
@@ -147,5 +226,20 @@ header {
   }
   .header_menu-button {
     display: block;
+  }
+  .banner_inner_content {
+    height: 450px;
+  }
+  .banner_inner_content {
+    padding: 240px 45px 36px;
+  }
+  .top_baner {
+    z-index: 999;
+  }
+}
+
+@media (max-width: 770px) {
+  .banner_inner_content button {
+    width: 100%;
   }
 }
