--- a/css/style.css
+++ b/css/style.css
@@ -247,10 +247,9 @@ header {
 .digital {
   background-image: url(../images/digital.png);
   max-height: 256px;
-  background-size: cover;
+  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #3295ce;
   border-radius: 8px;
   cursor: pointer;
   background-size: 100%;
@@ -259,7 +258,7 @@ header {
 .premium {
   background-image: url(../images/premium.png);
   max-height: 256px;
-  background-size: cover;
+  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
@@ -270,7 +269,7 @@ header {
 .right_grid {
   background-image: url(../images/360.png);
   background-position: center;
-  background-size: cover;
+  /* background-size: cover; */
   background-repeat: no-repeat;
   height: 100%;
   max-height: 540px;
@@ -292,7 +291,7 @@ header {
 }
 .grid_1_inner_contant {
   display: flex;
-  align-items: flex-end; /* This aligns the h1 tag to the bottom of the grid item */
+  align-items: flex-end;
   height: 100%;
   width: 100%;
   color: #fff;
@@ -316,6 +315,14 @@ header {
   text-decoration: none;
   color: #c4cdd0;
 }
+/* @media(max-width:760px){
+  .left_grid {
+    height: 541px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 30px;
+  }
+} */
 
 /* choose section */
 
@@ -342,6 +349,20 @@ header {
   }
   .top_baner {
     z-index: 999;
+  }
+}
+@media (max-width: 1110px) {
+  .digital,
+  .premium,
+  .right_grid {
+    background-size: cover;
+  }
+  .digital:hover,
+  .premium:hover {
+    background-size: cover;
+  }
+  .right_grid:hover {
+    background-size: cover;
   }
 }
 
