--- a/css/style.css
+++ b/css/style.css
@@ -221,12 +221,7 @@ header {
   padding-bottom: 40px;
 }
 /* choose section */
-.heading_wraper {
-  color: #141719;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 1.5;
-}
+
 .grid_1_sec {
   height: 540px;
   margin-bottom: 50px;
@@ -247,7 +242,6 @@ header {
 .digital {
   background-image: url(../images/digital.png);
   max-height: 256px;
-  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
@@ -258,7 +252,6 @@ header {
 .premium {
   background-image: url(../images/premium.png);
   max-height: 256px;
-  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
@@ -269,7 +262,6 @@ header {
 .right_grid {
   background-image: url(../images/360.png);
   background-position: center;
-  /* background-size: cover; */
   background-repeat: no-repeat;
   height: 100%;
   max-height: 540px;
@@ -315,14 +307,6 @@ header {
   text-decoration: none;
   color: #c4cdd0;
 }
-/* @media(max-width:760px){
-  .left_grid {
-    height: 541px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 30px;
-  }
-} */
 
 /* choose section */
 
@@ -372,5 +356,25 @@ header {
   }
   .text_baner {
     font-size: 28px;
+  }
+}
+
+@media (max-width: 760px) {
+  .left_grid {
+    display: grid;
+    /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns: 350px 350px;
+    grid-template-rows: 1fr;
+    grid-column-gap: 30px;
+  }
+  .grid_1 {
+    height: 270px;
+    overflow: scroll;
+    grid-template-columns: 730px 350px;
+    grid-column-gap: 30px;
+  }
+  .right_grid {
+    max-height: 256px;
+    max-width: 350px;
   }
 }
