--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   margin-top: 80px;
+  height: 400vh;
 }
 section {
   width: 100%;
@@ -304,7 +305,36 @@ header {
   color: #c4cdd0;
 }
 
-/* choose section */
+/* numbers section*/
+.numbers_container {
+  margin-top: 50px;
+  width: 100%;
+  display: grid;
+  grid-column-gap: 30px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.number_1 {
+  grid-row-gap: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  flex-direction: column;
+  flex: 1;
+  align-items: flex-start;
+  padding: 40px 48px;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+}
+.number_card {
+  background-color: #ffffff;
+}
+.number_card h1 {
+  color: #141719;
+  font-size: 44px;
+  font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 15px;
+}
 
 @media (max-width: 1440px) {
   .header_menu {
@@ -312,6 +342,16 @@ header {
   }
 }
 @media (max-width: 990px) {
+  .numbers_container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row-gap: 30px;
+  }
+  @media (max-width: 480px) {
+    .number_card h1 {
+      font-size: 36px;
+    }
+  }
   .header_menu {
     display: none;
   }
