--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h1 {
   font-size: 28px;
 }
 .banner_inner_content p {
-  width: 450px;
+  width: 500px;
   font-weight: 200;
 }
 .banner_inner_content button {
@@ -221,6 +221,13 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
+.heading_wraper {
+  color: #141719;
+
+  font-size: 24px;
+  font-weight: 700;
+}
 /* choose section */
 
 .grid_1 {
@@ -334,6 +341,21 @@ header {
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 15px;
+}
+/* bottom baner */
+.bottom_baner {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/personal_bancir.png);
+  background-size: cover;
+  background-position: bottom;
+  min-height: 360px;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  background-color: #000;
+  border-radius: 6px;
+  position: relative;
 }
 
 @media (max-width: 1440px) {
