--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ header {
   align-items: center;
   gap: 5px;
   transition: color 0.3s;
+  cursor: pointer;
 }
 .header_subscribe:hover {
   color: #3295ce;
@@ -358,6 +359,244 @@ header {
   position: relative;
 }
 
+/* offers_slider  */
+
+.offers_header_container {
+  margin-top: 35px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 200px;
+  gap: 50px;
+  color: black;
+}
+
+/* ... */
+
+/* digital_container */
+.dig_cont {
+  background-color: #ffff;
+}
+
+.digital_container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.digital_banner_img {
+  display: flex;
+  justify-content: right;
+}
+
+.digital_container {
+  padding: 0 40px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.download_apps {
+  margin-top: 40px;
+  display: flex;
+  width: 50px;
+  justify-content: space-between;
+  gap: 20px;
+}
+.digital_banner_img img {
+  width: 280px;
+  margin-top: 30px;
+}
+.digital_contant h1 {
+  font-size: 25px;
+  color: black;
+  font-weight: 600;
+}
+.digital_contant p {
+  max-width: 550px;
+  margin-top: 40px;
+}
+.app_download {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 30px;
+  border: 1px solid rgba(211, 205, 205, 0.828);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.app_download:hover {
+  background-color: #e8eced7f;
+}
+.download_button_responsve {
+  border: none;
+  background-color: #ffff;
+}
+.download_button_responsve a {
+  display: flex;
+  color: #182cc0;
+  background-color: #ffffff;
+  text-transform: uppercase;
+  border: 1px solid #182cc0;
+  border-radius: 4px;
+  padding: 16px 32px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.33;
+  text-decoration: none;
+  transition: background-position 0.25s ease-in-out;
+  cursor: pointer;
+}
+.download_button_responsve a:hover {
+  border: 1px solid #c9c9ce;
+}
+.second {
+  display: none;
+}
+
+/* footer */
+
+footer {
+  width: 100%;
+  background-color: #fff;
+  border-top: 1px solid #eef1f1;
+  margin-top: 100px;
+  position: static;
+  bottom: 0;
+  z-index: 100;
+}
+.footer {
+  border-bottom: 1px solid #eef1f1;
+}
+.footer_container {
+  width: 100%;
+  max-width: 1110px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  align-items: center;
+}
+.footer_bottom_bottom {
+  width: 100%;
+  max-width: 1110px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  align-items: center;
+}
+.footer_top {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.footer_top img {
+  width: 165px;
+}
+
+.footer_bottom {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  max-width: 1110px;
+  padding: 30px 0;
+  justify-content: space-between;
+  border-top: 1px solid #eef1f1;
+}
+
+.footer_bottom img {
+  cursor: pointer;
+  width: 200px;
+}
+.footer_bottom_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  font-size: 14px;
+}
+.footer_bottom_right div {
+  cursor: pointer;
+}
+.footer_bottom_right div:hover {
+  color: blue;
+}
+
+.footer_main_inner {
+  padding-right: 60px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer_main_inner h2 {
+  font-weight: bolder;
+  color: black;
+  padding-bottom: 20px;
+}
+.footer_main_inner p {
+  margin-top: 15px;
+  cursor: pointer;
+  font-weight: 100;
+}
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.flex:hover {
+  text-decoration: underline;
+}
+.social_networks {
+  margin-top: 30px;
+  font-weight: bolder;
+  color: black;
+}
+.footer_social_list {
+  margin-top: 20px;
+  display: flex;
+}
+.social_icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 6px;
+  background-color: #f9fafa;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+  display: flex;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.social_icon:hover {
+  color: #182cc0;
+  background-color: #eee;
+}
+.footer_main_inner p:hover {
+  color: blue;
+}
+.lang_togle {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: 64px;
+  height: 34px;
+  cursor: pointer;
+  padding: 0px 8px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+/* footer */
+
+@media (max-width: 1000px) {
+  .first {
+    display: none;
+  }
+  .second {
+    display: block;
+  }
+}
 @media (max-width: 1440px) {
   .header_menu {
     font-size: 14px;
@@ -414,6 +653,20 @@ header {
   }
   .text_baner {
     font-size: 28px;
+  }
+  .digital_container {
+    padding: 0 40px;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .digital_banner_img {
+    margin-right: 10%;
+  }
+  .digital_banner_img img {
+    width: 400px;
+  }
+  .download_button_responsve a {
+    padding: 16px 200px;
   }
 }
 
