--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  width: 100%;
   color: #555f62;
   background-color: #f9fafa;
   font-family: TBCX, sans-serif;
@@ -6,7 +7,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   margin-top: 80px;
-  height: 400vh;
 }
 section {
   width: 100%;
@@ -59,7 +59,7 @@ h1 {
   font-size: 28px;
 }
 .banner_inner_content p {
-  width: 500px;
+  max-width: 500px;
   font-weight: 200;
 }
 .banner_inner_content button {
@@ -91,7 +91,8 @@ header {
   left: 0;
   right: 0;
 }
-.header_logo {
+.header_logo,
+.header_logo_mini {
   padding-top: 7px;
 }
 .header_container {
@@ -160,9 +161,13 @@ header {
 }
 .header_buttons,
 .header_menu div,
-.header_logo {
+.header_logo,
+.header_logo_mini {
   cursor: pointer;
   white-space: nowrap;
+}
+.header_logo_mini {
+  display: none;
 }
 
 /* Burger Menu Button */
@@ -374,28 +379,21 @@ header {
 
 /* digital_container */
 .dig_cont {
+  padding: 0 40px;
   background-color: #ffff;
 }
 
 .digital_container {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
-  flex-direction: row;
 }
 .digital_banner_img {
   display: flex;
   justify-content: right;
 }
 
-.digital_container {
-  padding: 0 40px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
 .download_apps {
   margin-top: 40px;
   display: flex;
@@ -403,9 +401,16 @@ header {
   justify-content: space-between;
   gap: 20px;
 }
+.digital_banner_img_mini img {
+  max-width: 0px;
+}
 .digital_banner_img img {
   width: 280px;
   margin-top: 30px;
+}
+.digital_contant {
+  display: flex;
+  flex-direction: column;
 }
 .digital_contant h1 {
   font-size: 25px;
@@ -454,141 +459,6 @@ header {
   display: none;
 }
 
-/* footer */
-
-footer {
-  width: 100%;
-  background-color: #fff;
-  border-top: 1px solid #eef1f1;
-  margin-top: 100px;
-  position: static;
-  bottom: 0;
-  z-index: 100;
-}
-.footer {
-  border-bottom: 1px solid #eef1f1;
-}
-.footer_container {
-  width: 100%;
-  max-width: 1110px;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  align-items: center;
-}
-.footer_bottom_bottom {
-  width: 100%;
-  max-width: 1110px;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  align-items: center;
-}
-.footer_top {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.footer_top img {
-  width: 165px;
-}
-
-.footer_bottom {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  max-width: 1110px;
-  padding: 30px 0;
-  justify-content: space-between;
-  border-top: 1px solid #eef1f1;
-}
-
-.footer_bottom img {
-  cursor: pointer;
-  width: 200px;
-}
-.footer_bottom_right {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 40px;
-  font-size: 14px;
-}
-.footer_bottom_right div {
-  cursor: pointer;
-}
-.footer_bottom_right div:hover {
-  color: blue;
-}
-
-.footer_main_inner {
-  padding-right: 60px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  display: flex;
-  justify-content: space-between;
-}
-.footer_main_inner h2 {
-  font-weight: bolder;
-  color: black;
-  padding-bottom: 20px;
-}
-.footer_main_inner p {
-  margin-top: 15px;
-  cursor: pointer;
-  font-weight: 100;
-}
-.flex {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  cursor: pointer;
-  margin-top: 20px;
-}
-.flex:hover {
-  text-decoration: underline;
-}
-.social_networks {
-  margin-top: 30px;
-  font-weight: bolder;
-  color: black;
-}
-.footer_social_list {
-  margin-top: 20px;
-  display: flex;
-}
-.social_icon {
-  width: 40px;
-  height: 40px;
-  border-radius: 6px;
-  background-color: #f9fafa;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
-  display: flex;
-  cursor: pointer;
-  margin-left: 5px;
-}
-.social_icon:hover {
-  color: #182cc0;
-  background-color: #eee;
-}
-.footer_main_inner p:hover {
-  color: blue;
-}
-.lang_togle {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  width: 64px;
-  height: 34px;
-  cursor: pointer;
-  padding: 0px 8px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-/* footer */
-
 @media (max-width: 1000px) {
   .first {
     display: none;
@@ -608,11 +478,10 @@ footer {
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 30px;
   }
-  @media (max-width: 480px) {
-    .number_card h1 {
-      font-size: 36px;
-    }
+  .digital_banner_img img {
+    width: 200px;
   }
+
   .header_menu {
     display: none;
   }
@@ -654,23 +523,34 @@ footer {
   .text_baner {
     font-size: 28px;
   }
-  .digital_container {
-    padding: 0 40px;
-    display: flex;
-    flex-direction: column-reverse;
-  }
+
   .digital_banner_img {
-    margin-right: 10%;
+    display: none;
   }
-  .digital_banner_img img {
-    width: 400px;
+
+  .digital_banner_img_mini img {
+    margin-top: 30px;
+    max-width: 270px;
   }
   .download_button_responsve a {
-    padding: 16px 200px;
+    padding: 16px auto;
+    width: 100%;
+  }
+  .header_logo {
+    display: none;
+  }
+  .header_logo_mini {
+    display: block;
   }
 }
 
 @media (max-width: 760px) {
+  .digital_container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+  }
   .left_grid {
     height: 270px;
     display: grid;
@@ -686,5 +566,38 @@ footer {
   .right_grid {
     max-height: 256px;
     max-width: 350px;
+  }
+  .digital_contant h1 {
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 490px) {
+  .number_card h1 {
+    font-size: 36px;
+  }
+  .digital_banner_img_mini img {
+    margin-top: 30px;
+    max-width: 170px;
+  }
+  .digital_contant h1 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 390px) {
+  .digital_banner_img_mini img {
+    margin-top: 30px;
+    max-width: 100px;
+  }
+  .digital_contant h1 {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 290px) {
+  .digital_banner_img_mini img {
+    margin-top: 30px;
+    max-width: 50px;
   }
 }
