--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ header {
   line-height: 1.4;
   display: flex;
   align-items: center;
+  justify-content: end;
   gap: 5px;
   transition: color 0.3s;
   cursor: pointer;
