--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ section {
   color: #141719;
   font-weight: 500;
 }
+/* top banner */
 .top_baner {
   width: 100%;
   height: 100%;
@@ -78,6 +79,9 @@ h1 {
 .banner_inner_content button:hover {
   background-image: linear-gradient(#3295ce, #3295ce);
 }
+
+/* header */
+
 header {
   z-index: 100;
   height: 80px;
@@ -564,6 +568,41 @@ header {
 .tooltip:hover .tooltiptext {
   transition: visibility 0.1s;
   visibility: visible;
+}
+
+/* footer  */
+footer {
+  background-color: #001682;
+  width: 100%;
+  padding-left: 47px;
+  padding-right: 47px;
+}
+.footer_head {
+  max-width: 1110px;
+  background-color: gray;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  margin-top: 50px;
+}
+.footer_top_inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+#footer_language_icon {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: 64px;
+  height: 34px;
+  cursor: pointer;
+  padding: 0px 8px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+#footer_language_icon:hover {
+  background-color: #ededed;
 }
 
 @media (max-width: 1000px) {
