add prizes section

--- a/css/style.css
+++ b/css/style.css
@@ -604,6 +604,13 @@ footer {
 #footer_language_icon:hover {
   background-color: #ededed;
 }
+/* prizes_baner_title */
+.prizes_baner_title {
+  color: #141719;
+  margin-top: 0;
+  font-size: 24px;
+  font-weight: 700;
+}
 
 @media (max-width: 1000px) {
   .first {
