--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,8 +1,14 @@
-.swiper-container {
+.swiper-container,
+.swiper_container_prizes {
   width: 100%;
-  height: 400px;
   padding-bottom: 40px;
   overflow-x: hidden;
+}
+.swiper-container {
+  height: 400px;
+}
+.swiper_container_prizes {
+  height: 300px;
 }
 .swiper-slide {
   position: relative;
@@ -16,9 +22,20 @@
   border-radius: 8px;
   box-shadow: 0px 0px 0px rgb(149, 147, 147);
   cursor: pointer;
+  overflow: hidden;
 }
+
 .swiper-slide:hover {
   box-shadow: 5px 10px 18px #e7e6e6d0;
+}
+
+.swiper_img img {
+  z-index: 10;
+  transition: all 0.3s;
+}
+
+.swiper-slide:hover > .swiper_img img {
+  transform: translateY(-8px);
 }
 .swiper-scrollbar {
   background: rgba(0, 0, 0, 0.1);
@@ -64,7 +81,9 @@ strong {
 .swiper_content {
   padding: 28px;
 }
-
+.swiper-slide:hover > img {
+  transform: translateY(-9px);
+}
 .swiper_img img {
   width: 100%;
   height: auto;
@@ -87,11 +106,26 @@ strong {
   background-color: #fff;
   border-radius: 6px 0 0 6px;
   overflow: hidden;
+  z-index: 20;
 }
 .top_right img {
   width: 100%;
 }
-
+.prizes_img {
+  width: 100px;
+  height: 50px;
+  object-fit: fill;
+}
+.swiper_content_inner {
+  grid-row-gap: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 28px;
+  display: flex;
+}
+#prizes_slider {
+  background-color: white;
+}
 @media (max-width: 1000px) {
   strong {
     font-size: 12px;
