--- a/css/swiper.css
+++ b/css/swiper.css
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   font-size: 18px;
-  background: #f1f1f1;
+  background: white;
   border: 1px solid #ddd;
   height: 300px;
   border-radius: 8px;
@@ -125,6 +125,12 @@ strong {
 }
 #prizes_slider {
   background-color: white;
+}
+.products_container_swiper {
+  height: 450px;
+}
+.products_h2 {
+  margin-bottom: 20px;
 }
 @media (max-width: 1000px) {
   strong {
